ajustes na tela de inicio

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -4,7 +4,7 @@
 
 <div id="wrapper" class="animate">
   <nav class="navbar header-top fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <button type="button" class="navbar-toggle larr collapsed" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText">
+    <button type="button" class="navbar-toggle larr collapsed" data-toggle="collapse" data-target="#navbar-collapse-larr">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -74,7 +74,7 @@
           <a style="text-decoration:none;">
             <h5 class="card-title"><i class="fas fa-building"></i> Instituição <span class="quantidade">11</span></h5>
             <hr/>
-            <a href="#" title="Cadastrar Instituições" class="fas fa-plus-circle icon"></a>
+            <a href="#"  title="Cadastrar Instituições" class="fas fa-plus-circle icon"></a>
           </a>
         </div>
       </div>
@@ -137,6 +137,6 @@
   </div>
 </div>
 <div id="canvas">
-	<canvas class="myChart" id="myChart" height="95"></canvas>
+	<canvas class="myChart" id="myChart" height="75"></canvas>
 </div>
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
