--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -97,9 +97,6 @@ body{
     transition: .4s ease all;
 }
 
-#config {
-    margin-top: 300%;
-}
 
 @media (max-width: 590px) {
 	#container1 {
@@ -303,6 +300,45 @@ body{
 	transition: all 0.2s;
 }
 
+.navbar-toggle {
+	border: none;
+	background: transparent !important;
+}
+
+.navbar-toggle:hover {
+	background: transparent !important;
+}
+
+.navbar-toggle .icon-bar {
+	width: 22px;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+}
+
+/* ANIMATED X */
+.navbar-toggle.x .icon-bar:nth-of-type(1) {
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+	-webkit-transform-origin: 10% 10%;
+	-ms-transform-origin: 10% 10%;
+	transform-origin: 10% 10%;
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(2) {
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(3) {
+	-webkit-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	-webkit-transform-origin: 10% 90%;
+	-ms-transform-origin: 10% 90%;
+	transform-origin: 10% 90%;
+}
+
 /* ANIMATED LEFT ARROW */
 .navbar-toggle.larr.collapsed .icon-bar:nth-of-type(1) {
 	transform: translate3d(0,0,0) rotate(0deg);
@@ -330,3 +366,6 @@ body{
 	width: 11px;
 }
 /* END ANIMATED LEFT ARROW */
+
+
+
