--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,371 +1,293 @@
-body{
-    background:#f3f3f3;
-}
-#wrapper{
-    padding:90px 15px;
-}
-.navbar-expand-lg .navbar-nav.side-nav{
-    flex-direction: column;}
-.card{
-    margin-bottom: 15px; 
-    border-radius:0; 
-    box-shadow: 0 3px 5px rgba(0,0,0,.1); 
-}
-.header-top{
-    box-shadow: 0 3px 5px rgba(0,0,0,.1)
-}
-.leftmenutrigger, .navbar-nav li a .shortmenu{
-    display: none
-}
-.card-title{ 
-    font-size: 28px
-}
-@media(min-width:992px) {
-    .leftmenutrigger{
-        display: block;
-        display: block;
-        margin: 7px 20px 4px 0;
-        cursor: pointer;
-    }
-    #wrapper{
-        padding: 90px 15px 15px 75px; 
-    }
-    #wrapper.open{
-        padding: 90px 15px 15px 225px; 
-    }
-    .navbar-nav.side-nav.open {
-        left:0;
-    }
-    .navbar-nav li a .shortmenu {
-        float: right;
-        display: block;
-        opacity: 1;
-    }
-    .navbar-nav.side-nav.open.navbar-nav li a .shortmenu {
-        opacity: 0
-    }
-    .navbar-nav.side-nav{
-        background: #585f66;
-        box-shadow: 2px 1px 2px rgba(0,0,0,.1);
-        position:fixed;top:56px;
-        flex-direction: column!important;
-        left:-140px;
-        width:200px;
-        bottom:0;
-        padding-bottom:40px;
-    }
-}
-.animate{
-    -webkit-transition:all .2s ease-in-out;
-    -moz-transition:all .2s ease-in-out;
-    -o-transition:all .2s ease-in-out;
-    -ms-transition:all .2s ease-in-out;
-    transition:all .2s ease-in-out
-}
-.navbar-nav li a svg{
-    font-size: 25px;
-    float: left;
-    margin: 0 10px 0 5px;
-}
-.side-nav li { 
-    border-bottom: 1px solid #50575d;
-}
-.side-nav .dropdown {
-    position:initial;
-}
-.side-nav .dropdown-menu {
-    position:relative;
-    opacity:0;
-    left:120%;
-    top:0;
-    height:100%;
-    border:0;
-    padding:0;
-    margin:0;
-    border-radius:0;
-    box-shadow:5px 0 5px rgba(0,0,0,.1);
-    background:#eee;
-    visibility: hidden;
-    display:block;
-    transition: .4s ease all;
-}
-.side-nav .dropdown-menu.show {
-    left:100%;
-    opacity:1;
-    visibility: visible;
-    display:block;
-    transition: .4s ease all;
-}
-
-
-@media (max-width: 590px) {
-	#container1 {
-		display:none;
-	}
-}
-
-@media (max-width: 400px) {
-	#cont {
-		width:100%;
-		margin-right: 20px;
-	}
-}
-
-@media (max-width: 320px) {
-	#folha {
-		right: 17%;
-	}
-	#finance{
-		right: 10%;
-	}
-	#funcionario{
-		right: 17%;
-	}
-	#obraAtiva{
-		right: 17%;
-	}
-	#materiais{
-		left: -0%;
-	}
-	#controle{
-		right: 6%;
-	} 
-	.navbar-toggler {
-		position:relative;
-		left: 4%;
-	}
-}
-html{
-	overflow: hidden;
-	background-color: #e8e8e8;
-}
-
-@media (max-width: 992px) {
-	#logoff{
-		position:relative;
-		margin-bottom: 5px;
-	}
-}
-html {
-    overflow: hidden;
-}
-
-.separador {
-	width: 62%; /* coloque aqui a largura da linha */
-	border-top: 1px solid #000;
-	list-style-type: none;
-}
-
-#clinica {
-	font-size: 28px;
-	color: black
-}
-#relatorio {
-	font-size: 28px;
-	color: black
-}
-#especialidade {
-	font-size: 28px;
-	color: black
-}
-#voucher {
-	font-size: 28px;
-	color: black
-}
-#doacoes {
-	font-size: 28px;
-	color: black
-}
-#medico {
-	font-size: 28px;
-	color: black
-}
-.box {
-	margin-top: 20px;
-}
-body{
-	background-color: #e8e8e8; 
-}
-
-#iconMais {
-	float: right;
-	margin-top: 12px;
-	font-size: 20px;
-	color: black
-}
-#iconMais:hover {
-	float: right;
-	margin-top: 12px;
-	font-size: 20px;
-	color: #004431;
-}
-#extender {
-	float: left; 
-}
-
-#extender:hover {
-	color:red;
-}
-
-#quantidade {
-	font-size: 28px;
-	color:#004431
-}
-
-#clinicaMenu {
-	margin-top: -16px;
-	font-size: 14px;
-}
-
-.quantidade {
-    float: right;
-    color: green;
-}
-
-#canvas {
-    margin-left: 7%;
-    width: 90%;
-}
-
-.fa-home:before {
-    font-size: 25px;
-    margin-right: 10px; 
-}
-
-.fa-plus-square:before {
-    font-size: 25px;
-    margin-right: 15px;
-}
-
-.fa-ticket-alt:before {
-    font-size: 25px;
-    margin-right: 10px;
-}
-
-.fa-paste:before {
-    font-size: 25px;
-    margin-right: 10px;
-}
-
-.fa-cog:before {
-    font-size: 25px;
-    margin-right: 10px;
-}
-
-.container {
+body {
     position: relative;
-    left: 30px;
+    overflow-x: hidden;
+}
+body,
+html { height: 100%;}
+.nav .open > a, 
+.nav .open > a:hover, 
+.nav .open > a:focus {background-color: transparent;}
+
+/*-------------------------------*/
+/*           Wrappers            */
+/*-------------------------------*/
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
-.icon {
+#wrapper.toggled {
+    padding-left: 220px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    left: 220px;
+    width: 0;
+    height: 100%;
+    margin-left: -220px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background: #1a1a1a;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#sidebar-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 220px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    padding-top: 70px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -220px;
+}
+
+/*-------------------------------*/
+/*     Sidebar nav styles        */
+/*-------------------------------*/
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 220px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    position: relative; 
+    line-height: 20px;
+    display: inline-block;
+    width: 100%;
+}
+
+.sidebar-nav li:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    height: 100%;
+    width: 3px;
+    background-color: #1c1c1c;
+    -webkit-transition: width .2s ease-in;
+      -moz-transition:  width .2s ease-in;
+       -ms-transition:  width .2s ease-in;
+            transition: width .2s ease-in;
+
+}
+.sidebar-nav li:first-child a {
+    color: #fff;
+    background-color: #1a1a1a;
+}
+
+.sidebar-nav li:nth-child(3):before {
+    background-color: #79aefe;   
+}
+.sidebar-nav li:nth-child(4):before {
+    background-color: #79aefe;  
+}
+.sidebar-nav li:nth-child(5):before {
+    background-color: #79aefe;   
+}
+.sidebar-nav li:nth-child(6):before {
+    background-color: #79aefe;   
+}
+
+#dropdown:before {
+    background-color: white;   
+}
+
+.sidebar-nav li:hover:before,
+.sidebar-nav li.open:hover:before {
+    width: 100%;
+    -webkit-transition: width .2s ease-in;
+      -moz-transition:  width .2s ease-in;
+       -ms-transition:  width .2s ease-in;
+            transition: width .2s ease-in;
+
+}
+
+.collapse {
+    visibility: visible !important;
+}
+
+.sidebar-nav li a {
+    display: block;
+    color: #ddd;
     text-decoration: none;
-    color:black;
-    float: right;
-    font-size: 20px;
+    padding: 10px 15px 10px 30px;    
 }
 
-.icon:hover {
+.sidebar-nav li a:hover,
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus,
+.sidebar-nav li.open a:hover,
+.sidebar-nav li.open a:active,
+.sidebar-nav li.open a:focus{
+    color: #fff;
     text-decoration: none;
-    color:green;
-    float: right;
+    background-color: transparent;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
     font-size: 20px;
+    line-height: 44px;
+}
+.sidebar-nav .dropdown-menu {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    border-radius: 0;
+    border: none;
+    background-color: #222;
+    box-shadow: none;
 }
 
-.iconPaper {
-    text-decoration: none;
-    color:black;
-    float: right;
-    font-size: 20px;
+/*-------------------------------*/
+/*       Hamburger-Cross         */
+/*-------------------------------*/
+
+.hamburger {
+  position: fixed;
+  top: 20px;  
+  z-index: 999;
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin-left: 15px;
+  background: transparent;
+  border: none;
+}
+.hamburger:hover,
+.hamburger:focus,
+.hamburger:active {
+  outline: none;
+}
+.hamburger.is-closed:before {
+  content: '';
+  display: block;
+  width: 100px;
+  font-size: 14px;
+  color: #fff;
+  line-height: 32px;
+  text-align: center;
+  opacity: 0;
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-transition: all .35s ease-in-out;
+}
+.hamburger.is-closed:hover:before {
+  opacity: 1;
+  display: block;
+  -webkit-transform: translate3d(-100px,0,0);
+  -webkit-transition: all .35s ease-in-out;
 }
 
-.iconPaper:hover {
-    text-decoration: none;
-    color:blue;
-    float: right;
-    font-size: 20px;
+.hamburger.is-closed .hamb-top,
+.hamburger.is-closed .hamb-middle,
+.hamburger.is-closed .hamb-bottom,
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-middle,
+.hamburger.is-open .hamb-bottom {
+  position: absolute;
+  left: 0;
+  height: 4px;
+  width: 100%;
+}
+.hamburger.is-closed .hamb-top,
+.hamburger.is-closed .hamb-middle,
+.hamburger.is-closed .hamb-bottom {
+  background-color: #1a1a1a;
+}
+.hamburger.is-closed .hamb-top { 
+  top: 5px; 
+  -webkit-transition: all .35s ease-in-out;
+}
+.hamburger.is-closed .hamb-middle {
+  top: 50%;
+  margin-top: -2px;
+}
+.hamburger.is-closed .hamb-bottom {
+  bottom: 5px;  
+  -webkit-transition: all .35s ease-in-out;
 }
 
-.navbar-toggle {
-	border: none;
-	background: transparent !important;
+.hamburger.is-closed:hover .hamb-top {
+  top: 0;
+  -webkit-transition: all .35s ease-in-out;
+}
+.hamburger.is-closed:hover .hamb-bottom {
+  bottom: 0;
+  -webkit-transition: all .35s ease-in-out;
+}
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-middle,
+.hamburger.is-open .hamb-bottom {
+  background-color: #1a1a1a;
+}
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-bottom {
+  top: 50%;
+  margin-top: -2px;  
+}
+.hamburger.is-open .hamb-top { 
+  -webkit-transform: rotate(45deg);
+  -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
+}
+.hamburger.is-open .hamb-middle { display: none; }
+.hamburger.is-open .hamb-bottom {
+  -webkit-transform: rotate(-45deg);
+  -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
+}
+.hamburger.is-open:before {
+  content: '';
+  display: block;
+  width: 100px;
+  font-size: 14px;
+  color: #fff;
+  line-height: 32px;
+  text-align: center;
+  opacity: 0;
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-transition: all .35s ease-in-out;
+}
+.hamburger.is-open:hover:before {
+  opacity: 1;
+  display: block;
+  -webkit-transform: translate3d(-100px,0,0);
+  -webkit-transition: all .35s ease-in-out;
 }
 
-.navbar-toggle:hover {
-	background: transparent !important;
+/*-------------------------------*/
+/*            Overlay            */
+/*-------------------------------*/
+
+.overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(250,250,250,.8);
+    z-index: 1;
 }
-
-.navbar-toggle .icon-bar {
-	width: 22px;
-	-webkit-transition: all 0.2s;
-	transition: all 0.2s;
-}
-
-.navbar-toggle {
-	border: none;
-	background: transparent !important;
-}
-
-.navbar-toggle:hover {
-	background: transparent !important;
-}
-
-.navbar-toggle .icon-bar {
-	width: 22px;
-	-webkit-transition: all 0.2s;
-	transition: all 0.2s;
-}
-
-/* ANIMATED X */
-.navbar-toggle.x .icon-bar:nth-of-type(1) {
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-	-webkit-transform-origin: 10% 10%;
-	-ms-transform-origin: 10% 10%;
-	transform-origin: 10% 10%;
-}
-
-.navbar-toggle.x .icon-bar:nth-of-type(2) {
-	opacity: 0;
-	filter: alpha(opacity=0);
-}
-
-.navbar-toggle.x .icon-bar:nth-of-type(3) {
-	-webkit-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-	-webkit-transform-origin: 10% 90%;
-	-ms-transform-origin: 10% 90%;
-	transform-origin: 10% 90%;
-}
-
-/* ANIMATED LEFT ARROW */
-.navbar-toggle.larr.collapsed .icon-bar:nth-of-type(1) {
-	transform: translate3d(0,0,0) rotate(0deg);
-	width: 22px;
-}
-
-.navbar-toggle.larr.collapsed .icon-bar:nth-of-type(2) {
-	transform: translate3d(0,0,0) rotate(0deg);
-}
-
-.navbar-toggle.larr.collapsed .icon-bar:nth-of-type(3) {
-	transform: translate3d(0,0,0) rotate(0deg);
-	width: 22px;
-}
-
-.navbar-toggle.larr .icon-bar:nth-of-type(1) {
-	transform: translate3d(0px,6px,0) rotate(45deg);
-	transform-origin: left top;
-	width: 11px;
-}
-
-.navbar-toggle.larr .icon-bar:nth-of-type(3) {
-	transform: translate3d(0px,-6px,0) rotate(-45deg);
-	transform-origin: left bottom;
-	width: 11px;
-}
-/* END ANIMATED LEFT ARROW */
-
-
-
