--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,142 +1,38 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<div id="wrapper" class="animate">
-  <nav class="navbar header-top fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <button type="button" class="navbar-toggle larr collapsed" data-toggle="collapse" data-target="#navbar-collapse-larr">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" style="margin-left:10px;" href="#">Projeto ReSOMAR</a>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav animate side-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#" title="Início"><i class="fas fa-home"></i> Início <i class="fas fa-home shortmenu animate"></i></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" title="Cadastros" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-plus-square"></i> Cadastros <i class="fas fa-plus-square shortmenu animate"></i>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-          </div>
-        </li> 
-        <li class="nav-item">
-          <a class="nav-link" href="#" title="Voucher"><i class="fas fa-ticket-alt"></i> Voucher <i class="fas fa-ticket-alt shortmenu animate"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" title="Relatórios"><i class="fas fa-paste"></i> Relatórios <i class="fas fa-paste shortmenu animate"></i></a>
-        </li>
-        <li class="nav-item">
-          <a id="config" class="nav-link" href="#" title="Configurações"><i class="fas fa-cog"></i> Ajustes <i id="pequeno" class="fas fa-cog shortmenu animate"></i></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-md-auto d-md-flex">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-user"></i> Perfil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i> Sair</a>
-        </li>
-      </ul>
-    </div>
+<div id="wrapper">
+  <div class="overlay"></div>
+  <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+    <ul class="nav sidebar-nav">
+      <li class="sidebar-brand">
+        <a href="#">
+          Projeto ReSOMAR
+        </a>
+      </li>
+      <li>
+        <a href="#">Início</a>
+      </li>
+      <li><a data-toggle="collapse" data-target="#submenu1" aria-expanded="false" href="#">Cadastros <span class="caret"></span></a>
+        <ul class="nav collapse" id="submenu1" role="menu">
+          <li><a href="#">Cursos</a></li>
+          <li><a href="#">Turmas</a></li>
+          <li><a href="#">Alunos</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Voucher</a>
+      </li>
+      <li>
+        <a href="#">Relatórios</a>
+      </li>
+      <li>
+        <a href="#">Configurações</a>
+      </li>
+    </ul>
   </nav>
-</div>
-<div id="container" class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-hospital"></i> Clínica <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Cadastrar Clínicas" class="fas fa-plus-circle icon"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-graduation-cap"></i> Especialidade <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Cadastrar Especialidades" class="fas fa-plus-circle icon"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-building"></i> Instituição <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#"  title="Cadastrar Instituições" class="fas fa-plus-circle icon"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-user-md"></i> Médico <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Cadastrar Médicos" class="fas fa-plus-circle icon"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-user"></i> Pacientes <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Cadastrar Pacientes" class="fas fa-plus-circle icon"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-donate"></i> Doações <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Cadastrar Doações" class="fas fa-plus-circle icon"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-ticket-alt"></i> Voucher <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Liberar Vouchers" class="fas fa-paper-plane iconPaper"></a>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a style="text-decoration:none;">
-            <h5 class="card-title"><i class="fas fa-paste"></i> Relatórios <span class="quantidade">11</span></h5>
-            <hr/>
-            <a href="#" title="Emitir Relatórios" class="fas fa-paper-plane iconPaper"></a>
-          </a>
-        </div>
-      </div>
-    </div>
+  <div id="page-content-wrapper">
+    <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+      <span class="hamb-top"></span>
+      <span class="hamb-middle"></span>
+      <span class="hamb-bottom"></span>
+    </button>
   </div>
 </div>
-<div id="canvas">
-	<canvas class="myChart" id="myChart" height="75"></canvas>
-</div>
-<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
