--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,16 +6,28 @@
         <form class="login-form">
           <div class="form-group" [ngClass]="{'has-error': !user.valid}">
             <label for="userName" class="text-uppercase">Nome de Usúario</label>
-            <input type="text" class="form-control" id="userName" placeholder="" name="userName" [(ngModel)]="userName" #user="ngModel"
-              required>
-            <div *ngIf="user.errors">
-              {{user.errors.required}}
-            </div>
+            <input type="text" class="form-control" id="userName" placeholder="" name="userName" [(ngModel)]="userName"
+              #user="ngModel" required>
+            <span class="help-block" *ngIf="user.errors">
+              <ul>
+                <li *ngIf="user.errors.required">
+                  Campo obrigatório
+                </li>
+              </ul>
+            </span>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" [ngClass]="{'has-error': !pass.valid}">
             <label for="exampleInputPassword1" class="text-uppercase">Senha</label>
-            <input type="password" class="form-control" placeholder="" name="password" [(ngModel)]="password">
+            <input type="password" class="form-control" placeholder="" name="password" [(ngModel)]="password" #pass="ngModel"
+              required>
+            <span class="help-block" *ngIf="pass.errors">
+              <ul>
+                <li *ngIf="pass.errors.required">
+                  Campo obrigatório
+                </li>
+              </ul>
+            </span>
           </div>
           <div class="form-check">
             <button type="submit" class="btn btn-login float-right">Entrar</button>
