--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -97,6 +97,9 @@ html { height: 100%;}
     background-color: #1a1a1a;
 }
 
+.sidebar-nav li:nth-child(2):before {
+    background-color: #79aefe;   
+}
 .sidebar-nav li:nth-child(3):before {
     background-color: #79aefe;   
 }
@@ -110,8 +113,8 @@ html { height: 100%;}
     background-color: #79aefe;   
 }
 
-#dropdown:before {
-    background-color: white;   
+#submenu1 {
+    background-color: #1a1a1a;
 }
 
 .sidebar-nav li:hover:before,
@@ -172,7 +175,7 @@ html { height: 100%;}
   display: block;
   width: 32px;
   height: 32px;
-  margin-left: 15px;
+  margin-left: 35px;
   background: transparent;
   border: none;
 }
@@ -211,6 +214,13 @@ html { height: 100%;}
   height: 4px;
   width: 100%;
 }
+
+.hamburger.is-open[_ngcontent-c1] .hamb-top[_ngcontent-c1], .hamburger.is-open[_ngcontent-c1] .hamb-bottom[_ngcontent-c1] {
+    top: 50%;
+    margin-top: -2px;
+    margin-left: -25px;
+}
+
 .hamburger.is-closed .hamb-top,
 .hamburger.is-closed .hamb-middle,
 .hamburger.is-closed .hamb-bottom {
@@ -290,4 +300,17 @@ html { height: 100%;}
     bottom: 0;
     background-color: rgba(250,250,250,.8);
     z-index: 1;
+}
+
+.fas {
+    font-size: 20px;
+}
+
+.option {
+    margin-left: 20px;
+}
+
+.fa-graduation-cap {
+    position: relative;
+    right: 4px;
 }
