--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -8,23 +8,27 @@
         </a>
       </li>
       <li>
-        <a href="#">Início</a>
+        <a href="#"><i class="fas fa-home"></i> Início</a>
       </li>
-      <li><a data-toggle="collapse" data-target="#submenu1" aria-expanded="false" href="#">Cadastros <span class="caret"></span></a>
+      <li><a data-toggle="collapse" data-target="#submenu1" aria-expanded="false" href="#"><i class="fas fa-plus-square"></i> Cadastros <span class="caret"></span></a>
         <ul class="nav collapse" id="submenu1" role="menu">
-          <li><a href="#">Cursos</a></li>
-          <li><a href="#">Turmas</a></li>
-          <li><a href="#">Alunos</a></li>
+          <li class="option"><a href="#"><i class="fas fa-hospital"></i>  Clínicas</a></li>
+          <li class="option"><a href="#"><i class="fas fa-building"></i> Instituições</a></li>
+          <li class="option"><a href="#"><i class="fas fa-graduation-cap"></i> Especialidades</a></li>
+          <li class="option"><a href="#"><i class="fas fa-user-md"></i> Médicos</a></li>
+          <li class="option"><a href="#">Necessidades</a></li>
+          <li class="option"><a href="#"><i class="fas fa-user"></i> Pacientes</a></li>
+          <li class="option"><a href="#"><i class="fas fa-donate"></i> Doações</a></li>
         </ul>
       </li>
       <li>
-        <a href="#">Voucher</a>
+        <a href="#"><i class="fas fa-ticket-alt"></i> Voucher</a>
       </li>
       <li>
-        <a href="#">Relatórios</a>
+        <a href="#"><i class="fas fa-paste"></i> Relatórios</a>
       </li>
       <li>
-        <a href="#">Configurações</a>
+        <a href="#"><i class="fas fa-cog"></i> Configurações</a>
       </li>
     </ul>
   </nav>
