--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-md-4 login-sec">
         <h2 class="text-center">Entrar</h2>
-        <form class="login-form">
-          <div class="form-group" [ngClass]="{'has-error': !user.valid}">
-            <label for="userName" class="text-uppercase">Nome de Usúario</label>
+        <form class="login-form" #myForm = "ngForm">
+          <div class="form-group" [ngClass]="{'has-error': !user.valid && (user.dirty || user.touched)}">
+            <label for="userName" class="text-uppercase">Nome de Usuário</label>
             <input type="text" class="form-control" id="userName" placeholder="" name="userName" [(ngModel)]="userName"
               #user="ngModel" required>
-            <span class="help-block" *ngIf="user.errors">
+            <span class="help-block" *ngIf="user.errors && (user.dirty || user.touched)">
               <ul>
                 <li *ngIf="user.errors.required">
                   Campo obrigatório
@@ -17,11 +17,11 @@
             </span>
           </div>
 
-          <div class="form-group" [ngClass]="{'has-error': !pass.valid}">
+          <div class="form-group" [ngClass]="{'has-error': !pass.valid && (pass.dirty || pass.touched)}">
             <label for="exampleInputPassword1" class="text-uppercase">Senha</label>
             <input type="password" class="form-control" placeholder="" name="password" [(ngModel)]="password" #pass="ngModel"
               required>
-            <span class="help-block" *ngIf="pass.errors">
+            <span class="help-block" *ngIf="pass.errors && (pass.dirty || pass.touched)">
               <ul>
                 <li *ngIf="pass.errors.required">
                   Campo obrigatório
@@ -30,7 +30,7 @@
             </span>
           </div>
           <div class="form-check">
-            <button type="submit" class="btn btn-login float-right">Entrar</button>
+            <button type="submit" class="btn btn-login float-right" [disabled]="!myForm.valid">Entrar</button>
 
             <button type="button" class="btn btn-login float-right btnParticipation">Quero Participar</button>
           </div>
