--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -8,27 +8,27 @@
         </a>
       </li>
       <li>
-        <a href="#"><i class="fas fa-home"></i> Início</a>
+        <a href="#"><i class="fas fa-home"></i> <span class="text">Início</span></a>
       </li>
-      <li><a data-toggle="collapse" data-target="#submenu1" aria-expanded="false" href="#"><i class="fas fa-plus-square"></i> Cadastros <span class="caret"></span></a>
+      <li><a (click)="clickEvent()" data-toggle="collapse" data-target="#submenu1" aria-expanded="false" href="#"><i class="fas fa-plus-square"></i><span class="text"> Cadastros</span>  <i class="fas fa-chevron-down"></i></a>
         <ul class="nav collapse" id="submenu1" role="menu">
-          <li class="option"><a href="#"><i class="fas fa-hospital"></i>  Clínicas</a></li>
-          <li class="option"><a href="#"><i class="fas fa-building"></i> Instituições</a></li>
-          <li class="option"><a href="#"><i class="fas fa-graduation-cap"></i> Especialidades</a></li>
-          <li class="option"><a href="#"><i class="fas fa-user-md"></i> Médicos</a></li>
-          <li class="option"><a href="#">Necessidades</a></li>
-          <li class="option"><a href="#"><i class="fas fa-user"></i> Pacientes</a></li>
-          <li class="option"><a href="#"><i class="fas fa-donate"></i> Doações</a></li>
+          <li class="option"><a href="#"><i class="fas fa-hospital"></i><span class="text"> Clínicas</span></a></li>
+          <li class="option"><a href="#"><i class="fas fa-building"></i><span class="text"> Instituições</span></a></li>
+          <li class="option"><a href="#"><i class="fas fa-graduation-cap"></i><span class="textEspec"> Especialidades</span></a></li>
+          <li class="option"><a href="#"><i class="fas fa-user-md"></i><span class="text"> Médicos</span></a></li>
+          <li class="option"><a href="#"><i class="fas fa-hand-holding-heart"></i><span class="textNec"> Necessidades</span></a></li>
+          <li class="option"><a href="#"><i class="fas fa-user"></i><span class="text"> Pacientes</span></a></li>
+          <li class="option"><a href="#"><i class="fas fa-donate"></i><span class="textDoa"> Doações</span></a></li>
         </ul>
       </li>
       <li>
-        <a href="#"><i class="fas fa-ticket-alt"></i> Voucher</a>
+        <a href="#"><i class="fas fa-ticket-alt"></i><span class="textVou"> Voucher</span></a>
       </li>
       <li>
-        <a href="#"><i class="fas fa-paste"></i> Relatórios</a>
+        <a href="#"><i class="fas fa-paste"></i><span class="text"> Relatórios</span></a>
       </li>
       <li>
-        <a href="#"><i class="fas fa-cog"></i> Configurações</a>
+        <a href="#"><i class="fas fa-cog"></i><span class="textConf"> Configurações</span></a>
       </li>
     </ul>
   </nav>
