--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -9,27 +9,27 @@
         </a>
       </li>
       <li>
-        <a href="#" title="Início"><i class="fas fa-home"></i> <span class="tooltiptext"><span class="text">Início</span></span></a>
+        <a href="#" title="InÃ­cio"><i class="fas fa-home"></i> <span class="tooltiptext"><span class="text">InÃ­cio</span></span></a>
       </li>
       <li><a data-toggle="collapse" data-target="#submenu1" title="Cadastros" aria-expanded="false" href="#"><i class="fas fa-plus-square"></i><span class="text"> Cadastros</span>  <i class="fas fa-chevron-down"></i></a>
         <ul class="nav collapse" id="submenu1" role="menu">
-          <li class="option" title="Cadastrar Clínicas"><a href="#"><i class="fas fa-hospital"></i><span class="text"> Clínicas</span></a></li>
-          <li class="option" title="Cadastrar Instituições"><a href="#"><i class="fas fa-building"></i><span class="text"> Instituições</span></a></li>
+          <li class="option" title="Cadastrar Clï¿½nicas"><a href="#"><i class="fas fa-hospital"></i><span class="text"> ClÃ­nicas</span></a></li>
+          <li class="option" title="Cadastrar Instituiï¿½ï¿½es"><a href="#"><i class="fas fa-building"></i><span class="text"> InstituiÃ§Ãµes</span></a></li>
           <li class="option" title="Cadastrar Especialidades"><a href="#"><i class="fas fa-graduation-cap"></i><span class="textEspec"> Especialidades</span></a></li>
-          <li class="option" title="Cadastrar Médicos"><a href="#"><i class="fas fa-user-md"></i><span class="text"> Médicos</span></a></li>
+          <li class="option" title="Cadastrar Mï¿½dicos"><a href="#"><i class="fas fa-user-md"></i><span class="text"> MÃ©dicos</span></a></li>
           <li class="option" title="Cadastrar Necessidades"><a href="#"><i class="fas fa-hand-holding-heart"></i><span class="textNec"> Necessidades</span></a></li>
           <li class="option" title="Cadastrar Pacientes"><a href="#"><i class="fas fa-user"></i><span class="text"> Pacientes</span></a></li>
-          <li class="option" title="Cadastrar Doações"><a href="#"><i class="fas fa-donate"></i><span class="textDoa"> Doações</span></a></li>
+          <li class="option" title="Cadastrar Doaï¿½ï¿½es"><a href="#"><i class="fas fa-donate"></i><span class="textDoa"> DoaÃ§Ãµes</span></a></li>
         </ul>
       </li>
       <li>
         <a href="#" title="Vouchers"><i class="fas fa-ticket-alt" ></i><span class="textVou"> Voucher</span></a>
       </li>
       <li>
-        <a href="#" title="Relatórios"><i class="fas fa-paste"></i><span class="text"> Relatórios</span></a>
+        <a href="#" title="Relatï¿½rios"><i class="fas fa-paste"></i><span class="text"> RelatÃ³rios</span></a>
       </li>
       <li>
-        <a href="#" title="Configurações"><i class="fas fa-cog"></i><span class="textConf"> Configurações</span></a>
+        <a href="#" title="Configuraï¿½ï¿½es"><i class="fas fa-cog"></i><span class="textConf"> ConfiguraÃ§Ãµes</span></a>
       </li>
     </ul>
   </nav>
