--- a/Resomar/WebContent/View/login/login.html
+++ b/Resomar/WebContent/View/login/login.html
@@ -20,13 +20,13 @@
           <div class="form-group">
             <label for="userName" class="text-uppercase">Nome de Usuário</label>
             <input type="text" class="form-control" id="userName" placeholder="" name="userName" required>
-<!--             <span class="help-block"> -->
-<!--               <ul> -->
-<!--                 <li> -->
-<!--                   Campo obrigatório -->
-<!--                 </li> -->
-<!--               </ul> -->
-<!--             </span> -->
+            <span class="help-block">
+              <ul>
+                <li>
+                  Campo obrigatório
+                </li>
+              </ul>
+            </span>
           </div>
 
           <div class="form-group">
