--- a/Resomar/WebContent/View/login/login.html
+++ b/Resomar/WebContent/View/login/login.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Login</title>
-
-<link rel="stylesheet" href="login.css"/>
-<link rel="stylesheet" href="../../assets/css/bootstrap.min.css"/>
-<script type="text/javascript" src="../../assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../assets/js/angular.js"></script>
 
 </head>
 <body>
@@ -18,12 +13,12 @@
         <h2 class="text-center">Entrar</h2>
         <form class="login-form" >
           <div class="form-group">
-            <label for="userName" class="text-uppercase">Nome de Usuário</label>
+            <label for="userName" class="text-uppercase">Nome de UsuÃ¡rio</label>
             <input type="text" class="form-control" id="userName" placeholder="" name="userName" required>
             <span class="help-block">
               <ul>
                 <li>
-                  Campo obrigatório
+                  Campo obrigatÃ³rio
                 </li>
               </ul>
             </span>
@@ -35,7 +30,7 @@
 <!--             <span class="help-block"> -->
 <!--               <ul> -->
 <!--                 <li> -->
-<!--                   Campo obrigatório -->
+<!--                   Campo obrigatÃ³rio -->
 <!--                 </li> -->
 <!--               </ul> -->
 <!--             </span> -->
@@ -51,7 +46,7 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="../../assets/images/background-login.jpg" alt="First slide">
+              <img class="d-block img-fluid" src="assets/images/background-login.jpg" alt="First slide">
               <div class="banner-text">
                 <h2>Projeto ReSOMAR</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
