angular js animation

--- a/Resomar/WebContent/View/login/login.html
+++ b/Resomar/WebContent/View/login/login.html
@@ -11,11 +11,11 @@
     <div class="row">
       <div class="col-md-4 login-sec">
         <h2 class="text-center">Entrar</h2>
-        <form class="login-form" >
+        <form class="login-form" name="formLogin">
           <div class="form-group">
             <label for="userName" class="text-uppercase">Nome de Usuário</label>
-            <input type="text" class="form-control" id="userName" placeholder="" name="userName" required>
-            <span class="help-block">
+            <input type="text" class="form-control" id="userName" ng-model="fieldUserName" placeholder="" name="userName" required>
+            <span class="help-block" ng-show="formLogin.userName.$error.required">
               <ul>
                 <li>
                   Campo obrigatório
@@ -25,15 +25,16 @@
           </div>
 
           <div class="form-group">
-            <label for="exampleInputPassword1" class="text-uppercase">Senha</label>
-            <input type="password" class="form-control" placeholder="" name="password" required>
-<!--             <span class="help-block"> -->
-<!--               <ul> -->
-<!--                 <li> -->
-<!--                   Campo obrigatório -->
-<!--                 </li> -->
-<!--               </ul> -->
-<!--             </span> -->
+            <label for="exampleInputPassword1" class="text-uppercase">Sen
+              ha</label>
+            <input type="password" class="form-control" ng-model="fieldPassword" placeholder="" name="password" required>
+             <span class="help-block" ng-show="formLogin.password.$error.required">
+               <ul>
+                 <li>
+                   Campo obrigatório
+                 </li>
+               </ul>
+             </span>
           </div>
           <div class="form-check">
             <button type="submit" class="btn btn-login float-right" >Entrar</button>
