--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -1,2 +1,30 @@
-<div class="container">
+<div class="card bg-light mb-3" style="max-width: 73rem;">
+    <h4 class="card-header">Acesso Rápido</h4>
+    <div class="card-body row">
+        <div class="container border rounded col-md-3">
+            <div class="title-acess">Pacientes</div>
+            <hr>
+        </div>
+        <div class="container border rounded col-md-3">
+            <div class="title-acess">Pacientes</div>
+            <hr>
+        </div>
+        <div class="container border rounded col-md-3">
+            <div class="title-acess">Pacientes</div>
+            <hr>
+        </div>
+    </div>
+</div>
+<div class="card bg-light mb-3" style="max-width: 73rem;">
+    <h4 class="card-header">Informações</h4>
+    <div class="card-body">
+
+
+
+
+
+
+
+
+    </div>
 </div>
