--- a/Resomar/WebContent/View/home/home.css
+++ b/Resomar/WebContent/View/home/home.css
@@ -4,8 +4,8 @@ body {
 }
 body,
 html { height: 100%;}
-.nav .open > a, 
-.nav .open > a:hover, 
+.nav .open > a,
+.nav .open > a:hover,
 .nav .open > a:focus {background-color: transparent;}
 
 /*-------------------------------*/
@@ -71,7 +71,7 @@ html { height: 100%;}
 }
 
 .sidebar-nav li {
-    position: relative; 
+    position: relative;
     line-height: 20px;
     display: inline-block;
     width: 100%;
@@ -99,19 +99,19 @@ html { height: 100%;}
 }
 
 .sidebar-nav li:nth-child(2):before {
-    background-color: #79aefe;   
+    background-color: #79aefe;
 }
 .sidebar-nav li:nth-child(3):before {
-    background-color: #79aefe;   
+    background-color: #79aefe;
 }
 .sidebar-nav li:nth-child(4):before {
-    background-color: #79aefe;  
+    background-color: #79aefe;
 }
 .sidebar-nav li:nth-child(5):before {
-    background-color: #79aefe;   
+    background-color: #79aefe;
 }
 .sidebar-nav li:nth-child(6):before {
-    background-color: #79aefe;   
+    background-color: #79aefe;
 }
 
 #submenu1 {
@@ -136,7 +136,7 @@ html { height: 100%;}
     display: block;
     color: #ddd;
     text-decoration: none;
-    padding: 10px 15px 10px 30px;    
+    padding: 10px 15px 10px 30px;
 }
 
 .sidebar-nav li a:hover,
@@ -171,7 +171,7 @@ html { height: 100%;}
 
 .hamburger {
   position: fixed;
-  top: 20px;  
+  top: 20px;
   z-index: 999;
   display: block;
   width: 32px;
@@ -227,8 +227,8 @@ html { height: 100%;}
 .hamburger.is-closed .hamb-bottom {
   background-color: #1a1a1a;
 }
-.hamburger.is-closed .hamb-top { 
-  top: 5px; 
+.hamburger.is-closed .hamb-top {
+  top: 5px;
   -webkit-transition: all .35s ease-in-out;
 }
 .hamburger.is-closed .hamb-middle {
@@ -236,7 +236,7 @@ html { height: 100%;}
   margin-top: -2px;
 }
 .hamburger.is-closed .hamb-bottom {
-  bottom: 5px;  
+  bottom: 5px;
   -webkit-transition: all .35s ease-in-out;
 }
 
@@ -256,9 +256,9 @@ html { height: 100%;}
 .hamburger.is-open .hamb-top,
 .hamburger.is-open .hamb-bottom {
   top: 50%;
-  margin-top: -2px;  
+  margin-top: -2px;
 }
-.hamburger.is-open .hamb-top { 
+.hamburger.is-open .hamb-top {
   -webkit-transform: rotate(45deg);
   -webkit-transition: -webkit-transform .2s cubic-bezier(.73,1,.28,.08);
 }
@@ -311,7 +311,7 @@ html { height: 100%;}
     margin-left: 20px;
 }
 .option:hover {
-    background-color: #79aefe;  
+    background-color: #79aefe;
 }
 .text {
     position: relative;
@@ -385,4 +385,18 @@ html { height: 100%;}
 
 .sidebar-submenu {
     background-color: #3a3a3a;
+}
+
+.card {
+    margin-left: 21%;
+    margin-top: 2%;
+}
+
+.title-acess {
+    margin-top: 10%;
+}
+
+.container {
+    width: 80%;
+    margin: 5px;
 }
