--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -1,66 +1,116 @@
-
-<div class="page-wrapper chiller-theme" ng-class="{'toggled': showMenu}">
-	<a id="show-sidebar" class="btn btn-sm btn-dark"
-		ng-init="showMenu = false" ng-click="showMenu = !showMenu" href="#">
-		<i class="fas fa-bars"></i>
-	</a>
-	<nav class="sidebar-wrapper" id="sidebar">
-		<div class="sidebar-content">
-			<div class="sidebar-brand">
-				<a href="#">ReSomar</a>
-				<div id="close-sidebar" ng-click="showMenu = !showMenu">
-					<i class="fas fa-times"></i>
-				</div>
-			</div>
-			<div class="sidebar-header">
-				<div class="user-info">
-					<span class="user-name">Edison Schulz</span> <span
-						class="user-role">Administrator</span>
-				</div>
-			</div>
-			<!-- sidebar-search  -->
-			<div class="sidebar-menu">
-				<ul>
-					<li class="header-menu"><span>Geral</span></li>
-					<li class="sidebar-dropdown"><a href="#"> <i
-							class="fa fa-home"></i> <span>Início</span>
-					</a>
-					<li class="sidebar-dropdown" ng-init="showCadastro = false"
-						ng-click="showCadastro = !showCadastro"><a href="#"> <i
-							class="fas fa-plus-square"></i> <span>Cadastros</span></a>
+<div class="page-wrapper chiller-theme">
+    <nav class="sidebar-wrapper" id="sidebar">
+        <div class="sidebar-content">
+            <div class="sidebar-brand">
+                <a href="#">ReSomar</a>
+            </div>
+            <div class="sidebar-header">
+                <div class="user-info">
+                    <span class="user-name">Edison Schulz</span>
+                    <span
+                            class="user-role">Administrador
+                    </span>
+                </div>
+            </div>
+            <!-- sidebar-search  -->
+            <div class="sidebar-menu">
+                <ul>
+                    <li class="header-menu">
+                        <span>Geral</span>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="#">
+                            <i
+                                    class="fa fa-home"></i>
+                            <span>Início</span>
+                        </a>
+                    <li class="sidebar-dropdown" ng-init="showCadastro = false"
+                        ng-click="showCadastro = !showCadastro">
+                        <a href="#">
+                            <i
+                                    class="fas fa-plus-square"></i>
+                            <span>Cadastros</span>
+                        </a>
                     </li>
                     <div class="sidebar-submenu" ng-if="showCadastro">
                         <ul>
-                            <li><a href="#"><i class="fas fa-hospital"></i><span>Clínicas</span></a></li>
-                            <li><a href="#"><i class="fas fa-donate"></i></i><Span>Doações</Span></a></li>
-                            <li><a href="#"><i class="fas fa-graduation-cap"></i><span>Especialidades</span></a></li>
-                            <li><a href="#"><i class="far fa-building"></i><span>Instituições</span></a></li>
-                            <li><a href="#"><i class="fas fa-user-md"></i><span>Médicos</span></a></li>
-                            <li><a href="#"><i class="fas fa-hands"></i><span>Necessidades</span></a></li>
-                            <li><a href="#"><i class="fas fa-user-injured"></i><span>Pacientes</span></a></li>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-hospital"></i>
+                                    <span>Clínicas</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-donate"></i>
+                                    </i>
+                                    <Span>Doações</Span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-graduation-cap"></i>
+                                    <span>Especialidades</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="far fa-building"></i>
+                                    <span>Instituições</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-user-md"></i>
+                                    <span>Médicos</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-hands"></i>
+                                    <span>Necessidades</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-user-injured"></i>
+                                    <span>Pacientes</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
 
-					<li class="sidebar-dropdown"><a href="#"> <i
-							class="fas fa-ticket-alt"></i> <span>Vouchers</span>
-					</a></li>
-					<li class="sidebar-dropdown"><a href="#"> <i
-							class="fas fa-paste"></i> <span>Relatórios</span>
-					</a></li>
-					<li class="sidebar-dropdown"><a href="#"> <i
-							class="fas fa-cog"></i> <span>Configurações</span>
-					</a></li>
-				</ul>
-			</div>
+                    <li class="sidebar-dropdown">
+                        <a href="#">
+                            <i
+                                    class="fas fa-ticket-alt"></i>
+                            <span>Vouchers</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="#">
+                            <i
+                                    class="fas fa-paste"></i>
+                            <span>Relatórios</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-dropdown">
+                        <a href="#">
+                            <i
+                                    class="fas fa-cog"></i>
+                            <span>Configurações</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-		<!-- sidebar-content  -->
-		<div class="sidebar-footer">
+        <!-- sidebar-content  -->
+        <div class="sidebar-footer">
 
-			</a> <a href="#"> <i class="fa fa-power-off"></i>
-			</a>
-		</div>
-	</nav>
-	<!-- sidebar-wrapper  -->
-
-	<!-- page-content" -->
+            </a>
+            <a href="#">
+                <i class="fa fa-power-off"></i>
+            </a>
+        </div>
+    </nav>
 </div>
