--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -4,54 +4,54 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
+                    <span>Clínicas</span><a href="#"><i class="fas fa-hospital icon-dash"></i></a>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Clínica" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 form-group">
             <div class="card">
                 <div class="card-body">
-                    <span>Doações</span><i class="fas fa-donate icon-dash"></i>
+                    <span>Doações</span><a href="#"><i class="fas fa-donate icon-dash"></i></a>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Doação" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 form-group">
             <div class="card">
                 <div class="card-body">
-                    <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
+                    <span>Especialidades</span><a href="#"><i class="fas fa-graduation-cap icon-dash"></i></a>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Especialidade" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 form-group">
             <div class="card">
                 <div class="card-body">
-                    <span>Instituições</span><i class="fas fa-building icon-dash"></i>
+                    <span>Instituições</span><a href="#"><i class="fas fa-building icon-dash"></i></a>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Instituição" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 form-group">
             <div class="card">
                 <div class="card-body">
-                    <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
+                    <span>Médicos</span><a href="#"><i class="fas fa-user-md icon-dash"></i></a>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Médico" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 form-group">
             <div class="card">
                 <div class="card-body">
-                    <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
+                    <span>Necessidades</span><a href="#"><i class="fas fa-hands icon-dash"></i></a>
                     <hr>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Paciente" class="fa fa-plus-circle"></a>
+                    <a style="text-decoration:none;" href="#" title="Cadastrar Necessidade" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
