--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -102,7 +102,7 @@
 
             </a>
             <a href="#">
-                <i class="fa fa-power-off"></i>
+                <i title="Sair" class="fa fa-power-off"></i>
             </a>
         </div>
     </nav>
