--- a/Resomar/WebContent/View/home/home.css
+++ b/Resomar/WebContent/View/home/home.css
@@ -406,6 +406,11 @@ html { height: 100%;}
     color: darkgreen;
 }
 
+.fa-plus-circle:hover {
+    font-size: 20px;
+    color: #013901;
+}
+
 .icon-dash {
     float: right;
     color: #212529;
