--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -6,6 +6,7 @@
                 <div class="card-body">
                     <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
                     <hr>
+                    <span class="quantity">10</span>
                     <a style="text-decoration:none;" href="#" title="Cadastrar Clínicas" class="fa fa-plus-circle"></a>
                 </div>
             </div>
@@ -15,6 +16,7 @@
                 <div class="card-body">
                     <span>Doações</span><i class="fas fa-donate icon-dash"></i>
                     <hr>
+                    <span class="quantity">10</span>
                     <a style="text-decoration:none;" href="#" title="Cadastrar Doações" class="fa fa-plus-circle"></a>
                 </div>
             </div>
@@ -24,6 +26,7 @@
                 <div class="card-body">
                     <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
                     <hr>
+                    <span class="quantity">10</span>
                     <a style="text-decoration:none;" href="#" title="Cadastrar Especialidades" class="fa fa-plus-circle"></a>
                 </div>
             </div>
@@ -33,6 +36,7 @@
                 <div class="card-body">
                     <span>Instituições</span><i class="fas fa-building icon-dash"></i>
                     <hr>
+                    <span class="quantity">10</span>
                     <a style="text-decoration:none;" href="#" title="Cadastrar Instituições" class="fa fa-plus-circle"></a>
                 </div>
             </div>
@@ -42,6 +46,7 @@
                 <div class="card-body">
                     <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
                     <hr>
+                    <span class="quantity">10</span>
                     <a style="text-decoration:none;" href="#" title="Cadastrar Médicos" class="fa fa-plus-circle"></a>
                 </div>
             </div>
@@ -51,15 +56,28 @@
                 <div class="card-body">
                     <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
                     <hr>
+                    <span class="quantity">10</span>
                     <a style="text-decoration:none;" href="#" title="Cadastrar Necessidades" class="fa fa-plus-circle"></a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="card fast-acess bg-light mb-3" style="max-width: 73rem;">
-    <h4 class="card-header">Informações</h4>
-    <div class="card-body">
-        <canvas id="myChart" width="100" height="30"></canvas>
+<p>
+<div class="card fast-acess-grafic bg-lightmb-3 row" style="max-width: 73rem;">
+    <h4 class="card-header ">Informações</h4>
+    <div class="card-deck">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Gráfico 1</h5>
+                <canvas id="pie-chart" width="350" height="400"></canvas>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Gráfico 2</h5>
+                <canvas id="doughnut-chart" width="350" height="450"></canvas>
+            </div>
+        </div>
     </div>
 </div>
