--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -1,82 +1,84 @@
-<div class="card fast-acess bg-light" style="max-width: 73rem;">
-    <h4 class="card-header">Acesso Rápido</h4>
-    <div class="card-body row">
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
-                    <hr>
-                    <span class="quantity">10</span>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Clínicas" class="fa fa-plus-circle"></a>
+<div class="dashboard">
+    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+        <h4 class="card-header">Acesso Rápido</h4>
+        <div class="card-body row">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
+                        <hr>
+                        <span class="quantity">10</span>
+                        <a style="text-decoration:none;" href="#" title="Cadastrar Clínicas" class="fa fa-plus-circle"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 form-group">
-            <div class="card">
-                <div class="card-body">
-                    <span>Doações</span><i class="fas fa-donate icon-dash"></i>
-                    <hr>
-                    <span class="quantity">10</span>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Doações" class="fa fa-plus-circle"></a>
+            <div class="col-md-4 form-group">
+                <div class="card">
+                    <div class="card-body">
+                        <span>Doações</span><i class="fas fa-donate icon-dash"></i>
+                        <hr>
+                        <span class="quantity">10</span>
+                        <a style="text-decoration:none;" href="#" title="Cadastrar Doações" class="fa fa-plus-circle"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 form-group">
-            <div class="card">
-                <div class="card-body">
-                    <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
-                    <hr>
-                    <span class="quantity">10</span>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Especialidades" class="fa fa-plus-circle"></a>
+            <div class="col-md-4 form-group">
+                <div class="card">
+                    <div class="card-body">
+                        <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
+                        <hr>
+                        <span class="quantity">10</span>
+                        <a style="text-decoration:none;" href="#" title="Cadastrar Especialidades" class="fa fa-plus-circle"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 form-group">
-            <div class="card">
-                <div class="card-body">
-                    <span>Instituições</span><i class="fas fa-building icon-dash"></i>
-                    <hr>
-                    <span class="quantity">10</span>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Instituições" class="fa fa-plus-circle"></a>
+            <div class="col-md-4 form-group">
+                <div class="card">
+                    <div class="card-body">
+                        <span>Instituições</span><i class="fas fa-building icon-dash"></i>
+                        <hr>
+                        <span class="quantity">10</span>
+                        <a style="text-decoration:none;" href="#" title="Cadastrar Instituições" class="fa fa-plus-circle"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 form-group">
-            <div class="card">
-                <div class="card-body">
-                    <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
-                    <hr>
-                    <span class="quantity">10</span>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Médicos" class="fa fa-plus-circle"></a>
+            <div class="col-md-4 form-group">
+                <div class="card">
+                    <div class="card-body">
+                        <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
+                        <hr>
+                        <span class="quantity">10</span>
+                        <a style="text-decoration:none;" href="#" title="Cadastrar Médicos" class="fa fa-plus-circle"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4 form-group">
-            <div class="card">
-                <div class="card-body">
-                    <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
-                    <hr>
-                    <span class="quantity">10</span>
-                    <a style="text-decoration:none;" href="#" title="Cadastrar Necessidades" class="fa fa-plus-circle"></a>
+            <div class="col-md-4 form-group">
+                <div class="card">
+                    <div class="card-body">
+                        <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
+                        <hr>
+                        <span class="quantity">10</span>
+                        <a style="text-decoration:none;" href="#" title="Cadastrar Necessidades" class="fa fa-plus-circle"></a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<p>
-<div class="card fast-acess-grafic bg-lightmb-3 row" style="max-width: 73rem;">
-    <h4 class="card-header ">Informações</h4>
-    <div class="card-deck">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Gráfico 1</h5>
-                <canvas id="pie-chart" width="350" height="400"></canvas>
+    <p>
+    <div class="card fast-acess-grafic bg-light mb-3 row" style="max-width: 73rem;">
+        <h4 class="card-header ">Informações</h4>
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Gráfico 1</h5>
+                    <canvas id="pie-chart" width="350" height="400"></canvas>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Gráfico 2</h5>
-                <canvas id="doughnut-chart" width="350" height="450"></canvas>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Gráfico 2</h5>
+                    <canvas id="doughnut-chart" width="350" height="450"></canvas>
+                </div>
             </div>
         </div>
     </div>
